Fix #305: Layout problems due to CSS files loaded in random order The 2 rules have still the same priority but now have the same content.

--- a/ViewStack/themes/bootstrap/ViewStack.css
+++ b/ViewStack/themes/bootstrap/ViewStack.css
@@ -1,5 +1,5 @@
 .d-view-stack {
-  height: 200px;
+  height: 100%;
   display: block;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
